--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
+    "d3": "^7.9.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "d3": "^7.9.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
+    "gh-pages": "^6.3.0",
     "vite": "^6.0.5"
   }
 }
