--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "vite build && gh-pages -d dist"
+    "deploy": "npm run build && git worktree add .gh-pages gh-pages && rm -rf .gh-pages/* && cp -R dist/* .gh-pages/ && cd .gh-pages && git add -A && git commit -m \"Deploy\" && git push origin gh-pages && cd .. && git worktree remove .gh-pages"
   },
   "dependencies": {
     "d3": "^7.9.0",
@@ -16,7 +16,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
-    "gh-pages": "^6.3.0",
     "vite": "^6.0.5"
   }
 }
